qmsystem2 (1.1.7) unstable; urgency=low

  [Matias Muhonen]
  * Generate the documentation package for all architectures
  * Added the use time methods to the QmBattery stub

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  True, 29 Mar 2011 07:47:37 +0300

qmsystem2 (1.1.6) unstable; urgency=low

  [Matias Muhonen]
  * Allocate the QmTimePrivate2 class from heap (Fixes: NB#237975)

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Fri, 25 Mar 2011 13:20:31 +0200

qmsystem2 (1.1.5) unstable; urgency=low

  [Matias Muhonen]
  * Make refcounting in QmTimePrivate2 thread-safe (Fixes: NB#237975)

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Thu, 24 Mar 2011 09:03:39 +0200

qmsystem2 (1.1.4) unstable; urgency=low

  [Lihan Guo]
  * Add als streaming test case in als manual test

  [Matias Muhonen]
  * Remove the legacy time format handling code (Fixes: NB#237889)

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Wed, 23 Mar 2011 09:08:04 +0200

qmsystem2 (1.1.3) unstable; urgency=low

  [Matias Muhonen]
  * Improve QmBattery's documentation (Fixes: NB#237239)

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Thu, 17 Mar 2011 12:42:13 +0200

qmsystem2 (1.1.2) unstable; urgency=low

  [Yang Yang]
  * Remove getTZName() from time-test, which is deprecated

  [Matias Muhonen]
  * Improve the documentation of the main page (Fixes: NB#235447)
  * Parse mounts from /proc/mounts (Fixes: NB#231816)

 -- Yang Yang <ext-yang.25.yang@nokia.com>  Tue, 15 Mar 2011 13:50:19 +0200

qmsystem2 (1.1.1) unstable; urgency=low

  [Shenghua Liu]
  * Improve QmSensor API documentation

  [Matias Muhonen]
  * Fix a crash in QmTime (Fixes: NB#230333)

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Thu, 10 Mar 2011 14:21:28 +0200

qmsystem2 (1.1.0) unstable; urgency=low

  [Matias Muhonen]
  * Fix the heartbeat test
  * Fix compilation under GCC 4.5 (Fixes: NB#234925)

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Mon, 7 Mar 2011 09:39:17 +0200
