@@ -3,8 +3,9 @@ qmsystem2 (1.1.7) unstable; urgency=low
   [Matias Muhonen]
   * Generate the documentation package for all architectures
   * Added the use time methods to the QmBattery stub
+  * Unused code removed (Fixes: NB#242029)
 
- -- Matias Muhonen <ext-matias.muhonen@nokia.com>  True, 29 Mar 2011 07:47:37 +0300
+ -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Fri, 01 Apr 2011 09:56:51 +0300
 
 qmsystem2 (1.1.6) unstable; urgency=low
 
